# inventree-sso-groups-plugin

./: LICENSE  README.md  pyproject.toml
src/inventree_sso_groups/: SsoGroupsPlugin.py  __init__.py
